afegir mes opcions + millorar estil

--- a/public/templates/pages/home.twig
+++ b/public/templates/pages/home.twig
@@ -54,9 +54,14 @@
                         <label for="search-edibility" class="search-label">{{ __d('Comestibilidad', 'home') }}</label>
                         <select id="search-edibility" name="edibility" class="form-control search-input">
                             <option value="">{{ __d('Todos', 'home') }}</option>
+                            <option value="excelente-comestible">{{ __d('Excelente comestible', 'home') }}</option>
+                            <option value="buen-comestible">{{ __d('Buen comestible', 'home') }}</option>
                             <option value="comestible">{{ __d('Comestible', 'home') }}</option>
-                            <option value="no-comestible">{{ __d('No Comestible', 'home') }}</option>
-                            <option value="venenoso">{{ __d('Venenoso', 'home') }}</option>
+                            <option value="comestible-precaucion">{{ __d('Comestible con precaución', 'home') }}</option>
+                            <option value="no-comestible">{{ __d('No comestible', 'home') }}</option>
+                            <option value="sin-valor">{{ __d('Sin valor culinario', 'home') }}</option>
+                            <option value="toxica">{{ __d('Tóxica', 'home') }}</option>
+                            <option value="mortal">{{ __d('Mortal', 'home') }}</option>
                         </select>
                     </div>
                     <div class="search-group">
