--- a/public/templates/pages/about.twig
+++ b/public/templates/pages/about.twig
@@ -108,14 +108,13 @@
                 </div>
             </section>
 
-            <section class="mb-5" data-aos="fade-up">
+            <section class="mb-3" data-aos="fade-up">
                 <h2 class="h2 text-primary mb-4"><i class="fas fa-database"></i> {{ _('Datos Extraídos') }}</h2>
             </section>
-
-            <section class="text-center py-5" data-aos="zoom-in">
+            <section class="text-center py-4" data-aos="zoom-in">
                 <div class="card bg-white text-dark">
-                    <div class="card-body p-5">
-                        <h2 class="card-title mb-4 animate__animated animate__pulse animate__infinite animate__slower">{{ _('¿Quieres contribuir?') }}</h2>
+                    <div class="card-body p-4">
+                        <h2 class="h3 card-title mb-3 animate__animated animate__pulse animate__infinite animate__slower">{{ _('¿Quieres contribuir?') }}</h2>
                         <p class="card-text mb-4">{{ _('Únete a nuestro proyecto y ayúdanos a mejorar la plataforma.') }}</p>
                         <a href="https://github.com/mgrl39/fungi" class="btn btn-primary btn-lg animate__animated animate__pulse animate__infinite animate__slower">
                             <i class="fab fa-github"></i> {{ _('Ver en GitHub') }}
