--- a/public/templates/pages/about.twig
+++ b/public/templates/pages/about.twig
@@ -116,7 +116,7 @@
                     <div class="card-body p-4">
                         <h2 class="h3 card-title mb-3 animate__animated animate__pulse animate__infinite animate__slower">{{ _('¿Quieres contribuir?') }}</h2>
                         <p class="card-text mb-4">{{ _('Únete a nuestro proyecto y ayúdanos a mejorar la plataforma.') }}</p>
-                        <a href="https://github.com/mgrl39/fungi" class="btn btn-primary btn-lg animate__animated animate__pulse animate__infinite animate__slower">
+                        <a href="https://github.com/mgrl39/fungi" target="_blank" class="btn btn-primary btn-lg animate__animated animate__pulse animate__infinite animate__slower">
                             <i class="fab fa-github"></i> {{ _('Ver en GitHub') }}
                         </a>
                     </div>
